Bug 154363 - FILEOPEN PPTX Connectors are attached to the wrong side of rectangle shape
Summary: FILEOPEN PPTX Connectors are attached to the wrong side of rectangle shape
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.4.0.3 release
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:7.6.0 target:7.5.4
Keywords: bibisected, bisected, implementationError
Depends on:
Blocks: PPTX-line-connector-import
  Show dependency treegraph
 
Reported: 2023-03-24 11:28 UTC by Gabor Kelemen (Collabora)
Modified: 2024-02-20 01:10 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from PP (30.81 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2023-03-24 11:28 UTC, Gabor Kelemen (Collabora)
Details
The document in PP 2016 and recent LO master (181.32 KB, image/png)
2023-03-24 11:28 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-03-24 11:28:21 UTC
Created attachment 186186 [details]
Example file from PP

Attached example file contains a few rectangles with connectors attached to their right sides pointing into another rectangle.
In PP these are attached to the right sides of the rectangles, but in Impress to the left sides.

1. Open attached file
-> Connector lines start from the left sides of the three rectangles on the left.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b5c3a7502f7ff6ccf0f829c1f3a2ba50b8584c41
CPU threads: 14; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (hu_HU); UI: de-DE
Calc: threaded

This was good in 7.3, started in 7.4 with:

https://git.libreoffice.org/core/+/cbf66ec3e60d07efb7c3cceed9b4f0fb4f0510c8

author	Tibor Nagy <nagy.tibor2@nisz.hu>	Thu Mar 10 08:42:12 2022 +0100
committer	László Németh <nemeth@numbertext.org>	Tue Mar 29 16:12:45 2022 +0200

tdf#89449 PPTX import: fix line connectors

Adding CC to: Tibor Nagy
Comment 1 Gabor Kelemen (Collabora) 2023-03-24 11:28:52 UTC
Created attachment 186187 [details]
The document in PP 2016 and recent LO master
Comment 2 Xisco Faulí 2023-03-24 11:57:28 UTC
Reproduced in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 53946b0698d63849266f465c16386dd8e9319f19
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 3 Commit Notification 2023-04-11 17:33:14 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b7c542b5085374f1d031183cb86ceeefcf24964d

tdf#154363 sd: fix line connectors regression of mirrored shapes

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-04-18 07:27:52 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/756e7701486318e72dce823f3946b7b2ea350132

tdf#154363 sd: fix line connectors regression of mirrored shapes

It will be available in 7.5.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 NISZ LibreOffice Team 2023-04-19 12:33:28 UTC
Verified in:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 61b41646c5a93ca24f2c9f143cdb0da2c9258989
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded